# rag-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  development-playbook.md  docker-compose.yml  pyproject.toml
.claude/skills/build-test-verify/: SKILL.md
.claude/skills/create-adr/: SKILL.md
.claude/skills/docker-build/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/new-feature/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/self-review/: SKILL.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  audit-fixes.md  audit-technical-spec.md  code-conventions.md  models.md  testing-strategy.md
docs/decisions/: ADR-001-hybrid-retrieval.md  ADR-002-qdrant-choice.md  ADR-003-chunking-strategy.md  ADR-004-multilingual.md  ADR-005-gdpr-compliance.md
src/rag_engine/: exceptions.py
src/rag_engine/api/: app.py  dependencies.py
src/rag_engine/api/routes/: __init__.py  documents.py  gdpr.py  health.py  rate_limit.py
src/rag_engine/core/: __init__.py  evaluation.py  hybrid_retriever.py  reranker.py
src/rag_engine/ingestion/: __init__.py  chunker.py  language.py  pipeline.py
src/rag_engine/ingestion/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  text_parser.py
src/rag_engine/models/: __init__.py  config.py  document.py  gdpr.py  health.py  search.py
src/rag_engine/services/: __init__.py  embedding.py  gdpr.py
src/rag_engine/storage/: base.py  bm25_store.py  knowledge_graph.py  qdrant_store.py
src/rag_engine/utils/: audit.py  logging.py
tests/: conftest.py
tests/fixtures/: sample.docx
tests/integration/: conftest.py  test_api_integration.py  test_api_rate_limiting.py  test_api_schema.py  test_chunking_strategies.py  test_concurrent_tenants.py  test_gdpr_full_flow.py  test_hybrid_retrieval_quality.py  test_multilingual_search.py
tests/unit/: test_auth.py  test_bm25_store.py  test_documents_endpoint.py  test_embedding.py  test_evaluation.py  test_gdpr.py  test_health_endpoint.py  test_hybrid_retriever.py  test_ingestion.py  test_knowledge_graph.py  test_models.py  test_parsers.py  test_property.py  test_qdrant_store.py
