[project]
name = "rag-engine"
version = "0.1.0"
description = "Lightweight hybrid RAG engine for multilingual document search"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hennadii Pynko" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.3",
    "rank-bm25>=0.2",
    "networkx>=3.4",
    "langdetect>=1.0",
    "structlog>=24.4",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "httpx>=0.28",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.5",
    "pytest-randomly>=3.16",
    "hypothesis>=6.100",
    "schemathesis>=3.38",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "mypy>=1.19.1",
    "vulture>=2.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring full service stack (deselect with '-m not integration')",
]

[tool.coverage.run]
source = ["src/rag_engine"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "pass"]
